# notebridge

./: .gitignore  PUBLISH.md  README.md  README_CN.md  README_EN.md  config.example.json  debug_sync.py  fix_sync.py  notebridge.py  pyproject.toml  reddit_post.md  requirements.txt  test_duplicate_headers.py  test_pattern.py  test_sync_rules.py  verify_sync_fix.py
.github/workflows/: publish.yml  test.yml
tests/: test_tags_and_attachments.py
