[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebridge"
version = "0.2.0"
description = "CLI to sync notes between Joplin and Obsidian (bidirectional)."
readme = "README.md"
license = "MIT"
authors = [
    { name = "gorf" }
]
keywords = ["joplin", "obsidian", "sync", "notes", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Editors",
]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pyyaml",
    "tqdm",
    "fuzzywuzzy",
    "python-Levenshtein",
]

[project.scripts]
notebridge = "notebridge:main"

[tool.setuptools]
py-modules = ["notebridge"]
